@@ -17,16 +17,15 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.ditto.base.model.headers.DittoHeaders;
 import org.eclipse.ditto.connectivity.model.Connection;
 import org.eclipse.ditto.connectivity.model.ConnectionId;
 import org.eclipse.ditto.connectivity.model.LogEntry;
-import org.eclipse.ditto.internal.utils.akka.logging.DittoLoggerFactory;
 import org.eclipse.ditto.connectivity.model.signals.commands.exceptions.ConnectionTimeoutException;
 import org.eclipse.ditto.connectivity.model.signals.commands.query.RetrieveConnectionLogs;
 import org.eclipse.ditto.connectivity.model.signals.commands.query.RetrieveConnectionLogsResponse;
+import org.eclipse.ditto.internal.utils.akka.logging.DittoLoggerFactory;
 
 import akka.actor.AbstractActor;
 import akka.actor.ActorRef;
@@ -140,7 +139,7 @@ public final class RetrieveConnectionLogsAggregatorActor extends AbstractActor {
         final ConnectionId connectionId = theResponse.getEntityId();
         final List<LogEntry> originalLogEntries = theResponse.getConnectionLogs().stream()
                 .sorted(Comparator.comparing(LogEntry::getTimestamp).reversed())
-                .collect(Collectors.toList());
+                .toList();
 
         final List<LogEntry> restrictedLogs = new ArrayList<>();
         long currentSize = 0;
@@ -162,6 +161,7 @@ public final class RetrieveConnectionLogsAggregatorActor extends AbstractActor {
     }
 
     private void stopSelf() {
+        getContext().cancelReceiveTimeout();
         getContext().stop(getSelf());
     }
 
